--- a/lab-6.qmd
+++ b/lab-6.qmd
@@ -2,36 +2,30 @@
 title: "Lab 6 - Spicy"
 subtitle: "Performing Many Different Versions of an Analysis"
 editor: source
+  markdown: 
+    wrap: 72
 ---
 
-This assignment will challenge your function writing abilities. I'm not going 
-to lie, these functions are difficult but well within your reach. I do, however,
-want to recognize that not everyone is interested in being a "virtuoso" with 
-their function writing. So, there are two options for this week's lab:
+This assignment will challenge your function writing abilities. I'm not going to lie, these functions are difficult but well within your reach. I do, however, want to recognize that not everyone is interested in being a "virtuoso" with their function writing. So, there are two options for this week's lab:
 
-- **Option 1:** Complete this lab assignment in search of virtuoso status with
-your function writing
-- **Option 2:** Complete one of the difficult functions (Exercise 1 or Exercise
-2) and complete the "Alternative Lab 6". 
+-   **Option 1:** Complete this lab assignment in search of virtuoso status with your function writing
+-   **Option 2:** Complete one of the difficult functions (Exercise 1 or Exercise
+
+2)  and complete the "Alternative Lab 6".
 
 # Setting the Stage
 
-My number one use case for writing functions and iteration / looping is to
-perform some exploration or modeling repeatedly for different "tweaked"
-versions. For example, our broad goal might be to fit a linear regression model
-to our data. However, there are often multiple choices that we have to make in
-practice:
+My number one use case for writing functions and iteration / looping is to perform some exploration or modeling repeatedly for different "tweaked" versions. For example, our broad goal might be to fit a linear regression model to our data. However, there are often multiple choices that we have to make in practice:
 
-- Keep missing values or fill them in (imputation)? 
-- Filter out outliers in one or more variables?
+-   Keep missing values or fill them in (imputation)?
+-   Filter out outliers in one or more variables?
 
 We can map these choices to **arguments** in a custom model-fitting function:
 
-- `impute`: TRUE or FALSE
-- `remove_outliers`: TRUE or FALSE
+-   `impute`: TRUE or FALSE
+-   `remove_outliers`: TRUE or FALSE
 
-A function that implements the analysis and allows for variation in these 
-choices:
+A function that implements the analysis and allows for variation in these choices:
 
 ```{r}
 #| echo: true
@@ -53,18 +47,44 @@ fit_model <- function(df, impute, remove_outliers, mod) {
 
 # Helper Functions
 
-**Exercise 1:** Write a function that removes outliers in a dataset. The user
-should be able to supply the dataset, the variables to remove outliers from, and
-a threshold on the number of SDs away from the mean used to define outliers. 
-*Hint 1: You will need to calculate a z-score to filter the values!*
-*Hint 2: You might want to consider specifying a default value (e.g., 3) for `sd_thresh`.*
+**Exercise 1:** Write a function that removes outliers in a dataset. The user should be able to supply the dataset, the variables to remove outliers from, and a threshold on the number of SDs away from the mean used to define outliers. *Hint 1: You will need to calculate a z-score to filter the values!* *Hint 2: You might want to consider specifying a default value (e.g., 3) for `sd_thresh`.*
 
 ```{r}
 #| label: exercise-1
 
+remove_outliers <- function(df, ..., sd_thresh = 3){
+  
+  #check for non-numeric columns
+  non_num <- df %>%
+    select(...) %>%
+    map_lgl(~ !(is.numeric(.x))) %>%
+    keep(identity) %>%
+    names()
+  
+  if (length(non_num) > 0) {
+    stop("The following columns are not numeric: ",
+         str_c(non_num, collapse = ", "))
+  }
+  
+  #finding z-scores of each column
+  z_scores <- df %>% 
+    select(...) %>% 
+    mutate(across(everything(), scale),
+           id = as.character(c(1:nrow(df)))) %>%
+    filter(if_all(everything(), ~ .< sd_thresh),
+           if_all(everything(), ~ .> sd_thresh * -1))
+  
+  #removing outliers by row ID
+  no_outliers <- df %>%
+    filter(row_number() %in% as.numeric(z_scores$id))
+  
+  #final output
+  no_outliers
+
+}
 ```
 
-## Testing Your Function! 
+## Testing Your Function!
 
 ```{r}
 #| label: exercise-1-test
@@ -91,11 +111,7 @@ remove_outliers(diamonds,
                 sd_thresh = 2)
 ```
 
-**Exercise 2:** Write a function that imputes missing values for numeric 
-variables in a dataset. The user should be able to supply the dataset, the 
-variables to impute values for, and a function to use when imputing. 
-*Hint 1: You will need to use `across()` to apply your function, since the user can input multiple variables.*
-*Hint 2: The `replace_na()` function is helpful here!*
+**Exercise 2:** Write a function that imputes missing values for numeric variables in a dataset. The user should be able to supply the dataset, the variables to impute values for, and a function to use when imputing. *Hint 1: You will need to use `across()` to apply your function, since the user can input multiple variables.* *Hint 2: The `replace_na()` function is helpful here!*
 
 ```{r}
 #| label: exercise-2
@@ -103,7 +119,7 @@ variables to impute values for, and a function to use when imputing.
 
 ```
 
-## Testing Your Function! 
+## Testing Your Function!
 
 ```{r}
 #| label: exercise-2-test
@@ -128,16 +144,12 @@ impute_missing(nycflights13::flights,
 
 # Primary Function
 
-**Exercise 3:** Write a `fit_model()` function that fits a specified linear
-regression model for a specified dataset. The function should:
+**Exercise 3:** Write a `fit_model()` function that fits a specified linear regression model for a specified dataset. The function should:
 
-- allow the user to specify if outliers should be removed (`TRUE` or `FALSE`)
-- allow the user to specify if missing observations should be imputed
-(`TRUE` or `FALSE`)
+-   allow the user to specify if outliers should be removed (`TRUE` or `FALSE`)
+-   allow the user to specify if missing observations should be imputed (`TRUE` or `FALSE`)
 
-If either option is `TRUE`, your function should call your `remove_outliers()`
-or `impute_missing()` functions to modify the data **before** the regression 
-model is fit. 
+If either option is `TRUE`, your function should call your `remove_outliers()` or `impute_missing()` functions to modify the data **before** the regression model is fit.
 
 ```{r}
 #| label: exercise-3
@@ -145,7 +157,7 @@ model is fit.
 
 ```
 
-## Testing Your Function! 
+## Testing Your Function!
 
 ```{r}
 #| label: exercise-3-test
@@ -162,28 +174,22 @@ fit_model(
 
 # Iteration
 
-In the `diamonds` dataset, we want to understand the relationship between
-`price` and size (`carat`). We want to explore variation along two choices:
+In the `diamonds` dataset, we want to understand the relationship between `price` and size (`carat`). We want to explore variation along two choices:
 
-1. The variables included in the model. We'll explore 3 sets of variables:
-    - No further variables (just `price` and `carat`)
-    - Adjusting for `cut`
-    - Adjusting for `cut` and `clarity`
-    - Adjusting for `cut`, `clarity`, and `color`
+1.  The variables included in the model. We'll explore 3 sets of variables:
 
-2. Whether or not to impute missing values
+    -   No further variables (just `price` and `carat`)
+    -   Adjusting for `cut`
+    -   Adjusting for `cut` and `clarity`
+    -   Adjusting for `cut`, `clarity`, and `color`
 
-3. Whether or not to remove outliers in the `carat` variable (we'll define
-outliers as cases whose `carat` is over 3 SDs away from the mean).
+2.  Whether or not to impute missing values
+
+3.  Whether or not to remove outliers in the `carat` variable (we'll define outliers as cases whose `carat` is over 3 SDs away from the mean).
 
 ## Parameters
 
-First, we need to define the set of parameters we want to iterate the
-`fit_model()` function over. The `tidyr` package has a useful function called
-`crossing()` that is useful for generating argument combinations. For each
-argument, we specify all possible values for that argument and `crossing()` 
-generates all combinations. 
-*Note that you can create a list of formula objects in R with `c(y ~ x1, y ~ x1 + x2)`.*
+First, we need to define the set of parameters we want to iterate the `fit_model()` function over. The `tidyr` package has a useful function called `crossing()` that is useful for generating argument combinations. For each argument, we specify all possible values for that argument and `crossing()` generates all combinations. *Note that you can create a list of formula objects in R with `c(y ~ x1, y ~ x1 + x2)`.*
 
 ```{r}
 #| label: example-crossing-arguments
@@ -198,8 +204,7 @@ df_arg_combos <- crossing(
 df_arg_combos
 ```
 
-**Exercise 4:** Use `crossing()` to create the data frame of argument
-combinations for our analyses. 
+**Exercise 4:** Use `crossing()` to create the data frame of argument combinations for our analyses.
 
 ```{r}
 #| label: exercise-4
@@ -208,14 +213,12 @@ combinations for our analyses.
 
 ## Iterating Over the Parameters
 
-We've arrived at the final step! 
+We've arrived at the final step!
 
-**Exercise 5:** Use `pmap()` from `purrr` to apply the `fit_model()` function to
-every combination of arguments from `diamonds.
+**Exercise 5:** Use `pmap()` from `purrr` to apply the `fit_model()` function to every combination of arguments from \`diamonds.
 
 ```{r}
 #| label: exercise-5
 
 
 ```
-
