--- a/lab-6.qmd
+++ b/lab-6.qmd
@@ -2,9 +2,16 @@
 title: "Lab 6 - Spicy"
 subtitle: "Performing Many Different Versions of an Analysis"
 editor: source
-  markdown: 
-    wrap: 72
 ---
+
+```{r}
+#| warning: false
+
+library(tidyverse)
+library(rlang)
+library(palmerpenguins)
+library(nycflights13)
+```
 
 This assignment will challenge your function writing abilities. I'm not going to lie, these functions are difficult but well within your reach. I do, however, want to recognize that not everyone is interested in being a "virtuoso" with their function writing. So, there are two options for this week's lab:
 
@@ -189,6 +196,18 @@ If either option is `TRUE`, your function should call your `remove_outliers()` o
 ```{r}
 #| label: exercise-3
 
+fit_model <- function(df, impute_missing = F, remove_outliers = F, 
+                      mod_formula, ...) {
+  if (impute_missing == T) {
+    df <- impute_missing(df, ...)
+  }
+  
+  if (remove_outliers == T) {
+    df <- remove_outliers(df, ...)
+  }
+  
+  summary(lm(mod_formula, data = df))
+}
 
 ```
 
